[package]
name = "cw-staking-extension"
version = "0.1.0"
authors = []
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["juno"]
library = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
juno = ["dep:wasmswap", "dep:cw20_junoswap", "dep:terraswap"]
terra = ["dep:terraswap"]
osmosis = ["library","dep:osmosis-std"]

# Keep as is until TendermintStake updates.
[dependencies]
abstract-sdk = "0.2.0-beta.7"
abstract-extension = "0.2.0-beta.7"

cosmwasm-std = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
cw-asset = { version = "2.2" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

# Juno dexes
cw20_junoswap = {package = "cw20", version = "0.10.0", optional = true}
wasmswap = {git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.0.0-beta", features = ["library"], optional = true}
# terraswap_juno = {package = "terraswap", version = "2.8.0", optional = true}

# Terra dexes
terraswap = {version = "2.8.0", optional = true}
cw20 = { version = "0.16" }
# Osmosis
osmosis-std = {version = "0.12.0", optional = true}

[dev-dependencies]
cosmwasm-schema = { version = "1.1" }
