[package]
# TODO rename
name = "cw-staking"
description = "Cw-staking is a Abstract extension for staking tokens by 4t2 Finance."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["juno"]
library = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
juno = ["dep:wasmswap", "dep:cw20_junoswap", "dep:terraswap"]
terra = ["dep:terraswap"]
osmosis = ["library", "dep:osmosis-std"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
abstract-sdk = { workspace = true }
abstract-extension = { workspace = true }
cw-asset = "2.4.0"
forty-two = { path = "../../packages/forty-two" }

# Juno dexes
cw20_junoswap = { package = "cw20", version = "0.10.0", optional = true }
wasmswap = { git = "https://github.com/Wasmswap/wasmswap-contracts", tag = "v1.1.2-beta", features = [
  "library",
], optional = true }
# terraswap_juno = {package = "terraswap", version = "2.8.0", optional = true}

# Terra dexes
terraswap = { version = "2.8.0", optional = true }
cw20 = { version = "0.16" }

# Osmosis
osmosis-std = { version = "0.12.0", optional = true }
